--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,6 +3,7 @@ Django==3.1.6
 djangorestframework==3.11.0
 django-stubs==1.7.0
 drf-yasg==1.20.0
+gunicorn==20.1.0
 user-agents==2.2.0
 pycryptodome==3.10.1
 PyJWT==1.7.1
